re-include some default elasticsearch exec options (forgot some were not logging-related) from /commit 6df1932fcb /issue #55