@@ -3,11 +3,6 @@ want to enable GC logging. We've found the following set to be verbose and
 helpful...
 
     elasticsearch.exec.options:
-    - "-XX:+AggressiveOpts"
-    - "-XX:+UseCompressedOops"
-    - "-XX:+UseParNewGC"
-    - "-XX:+UseConcMarkSweepGC"
-    - "-XX:+CMSParallelRemarkEnabled"
     - "-XX:+PrintCommandLineFlags"
     - "-XX:+PrintFlagsFinal"
     - "-XX:+PrintPromotionFailure"
